--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <h2>Free Peoples Player</h2>
   </div>
   <div class="map">
+    <div class="pointer"></div>
     <img class="imagen-mapa" src="WholeMap.jpg">
   </div>
   <div class="player-enemy">
