--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="main.js"></script>
 </head>
 
 <body>
@@ -18,12 +19,13 @@
         <input type="text" id="search" name="search" placeholder="Search Here!" size="50"><span class="glyphicon glyphicon-search"></span>
       </div>
       <div class="button">
-        <button type="button" class="btn btn-success btn-md" id="submit" name="button">Search!</button>
-        <button type="button" class="btn btn-danger btn-md" id="erase" name="button-erase">Back to Normal!</button>
+        <button type="button" class="btn btn-success btn-md" id="submit" name="button" onclick='searchRegion(document.getElementById("search").value)'>Search!</button>
+        <button type="button" class="btn btn-danger btn-md" id="erase" name="button-erase" onclick="eraseInput()">Back to Normal!</button>
       </div>
     </form>
     <div class="information">
       <h3 class="info-text"></h3>
+      <div class="info-display"></div>
     </div>
   </div>
   <div class="player">
@@ -38,6 +40,6 @@
   </div>
 </body>
 <style src="style.css"></style>
-<script src="main.js"></script>
+
 
 </html>
