Started to change images to the file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div class="map">
     <div class="pointer"></div>
-    <img class="imagen-mapa" src="WholeMap.jpg">
+    <img class="imagen-mapa" src="imagenes/WholeMap.jpg">
   </div>
   <div class="player-enemy">
     <h2>Sauron Player</h2>
