Added more documentation to the javascript functions

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   background-color: red;
   color: white;
 }
+.about-me{
+  background-color: gray;
+}
+.info-me{
+  font-style: italic;
+}
 </style>
 <body>
   <div class="jumbotron text-center">
@@ -48,6 +54,12 @@
   </div>
   <div class="container-fluid text-white text-center player-enemy">
     <h2>Sauron Player</h2>
+  </div>
+  <div class="about-me container-fluid">
+    <h4 class="about-me-text text-center">Contact Information</h4>
+    <p>GitHub: <span class="info-me"><a href="https://github.com/joacocruz6">github.com/joacocruz6</a></span></p>
+    <p>LinkedIn: <span class="info-me"><a href="https://www.linkedin.com/in/joaqu%C3%ADn-tomas-cruz-doggenweiler-3ab0b4168/">Joaquín Tomas Cruz Doggenweiler</a></span></p>
+    <p>Mail: <span class="info-me">joacocruz6@gmail.com</span></p>
   </div>
 </body>
 <style src="style.css"></style>
