--- a/index.html
+++ b/index.html
@@ -4,63 +4,118 @@
 <head>
   <meta charset="utf-8">
   <title>WOTR Map App</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <script src="main.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
-<style>
-.jumbotron{
-  background-color: grey;
-  color: #ffffff;
-}
-.player-enemy{
-  background-color: red;
-  color: white;
-}
-.about-me{
-  background-color: gray;
-}
-.info-me{
-  font-style: italic;
-}
-</style>
+
 <body>
-  <div class="jumbotron text-center">
-    <h1 class="display-1">War of the Ring Map App!</h1>
-    <p class="lead">How to use: In the input search for the region, then the map will pointed out in that region! </p>
-  </div>
-  <div class="text-center searcher">
-    <form>
-      <div class="input">
-        <input type="text" id="search" name="search" placeholder="Search Here!" size="50"><span class="glyphicon glyphicon-search"></span>
-      </div>
-      <div class="button">
-        <button type="button" class="btn btn-success btn-md" id="submit" name="button" onclick='searchRegion(document.getElementById("search").value)'>Search!</button>
-        <button type="button" class="btn btn-danger btn-md" id="erase" name="button-erase" onclick="eraseInput()">Back to Normal!</button>
-      </div>
+  <nav class="navbar navbar-dark bg-dark">
+    <span class="navbar-brand" style="color:white">War of the Ring Map App</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="https://github.com/joacocruz6"><i class="fab fa-github"></i> My GitHub <span
+              class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#"> <i class="fab fa-linkedin"></i> My LinkedIn</a>
+        </li>
+        <li class="nav-item">
+          <span class="nav-link" href="#"><i class="far fa-envelope"></i> joacocruz6@gmail.com</a>
+        </li>
+        <li class="nav-item">
+          <span class="nav-link"><i class="far fa-id-card"></i>Joaquín Cruz</span>
+        </li>
+      </ul>
+    </div>
+    <!--<form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button id="submit" onclick='searchRegion(document.getElementById("search").value)' class="btn btn-outline-success my-2 my-sm-0">Search</button>
+      <button class="btn btn-outline-danger my-2 my-sm-0">Back to Normal!</button>
     </form>
-    <div class="information">
-      <h3 class="info-text"></h3>
-      <div class="info-display"></div>
+  -->
+  </nav>
+  <!--Search navigation-->
+  <div class="container-fluid" style="padding-top:15px;">
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-4">
+        <div class="input">
+          <input type="text" id="search" name="search" placeholder="Search Here!" size="50"><span
+            class="glyphicon glyphicon-search"></span>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-5"></div>
+      <div class="col-5">
+        <button type="button" class="btn btn-success btn-md" id="submit" name="button"
+          onclick='searchRegion(document.getElementById("search").value)'>Search!</button>
+
+        <button type="button" class="btn btn-danger btn-md" id="erase" name="button-erase" onclick="eraseInput()">Back
+          to Normal!</button>
+      </div>
     </div>
   </div>
-  <div class="container-fluid bg-primary text-center player">
-    <h2>Free Peoples Player</h2>
+  <!--Content displayed-->
+  <div class="container">
+    <div class="row">
+      <div class="col-3"></div>
+      <div class="information col-6" style="background-color: grey; color: black; border-radius:10px; display:none;">
+        <h3 class="info-text"></h3>
+        <div class="info-display"></div>
+      </div>
+    </div>
   </div>
-  <div class="text-center map">
-    <div class="pointer"></div>
-    <img class="img-rounded imagen-mapa" src="imagenes/WholeMap.jpg" alt="War of the ring map">
-  </div>
-  <div class="container-fluid text-white text-center player-enemy">
-    <h2>Sauron Player</h2>
-  </div>
-  <div class="about-me container-fluid">
-    <h4 class="about-me-text text-center">Contact Information</h4>
-    <p>GitHub: <span class="info-me"><a href="https://github.com/joacocruz6">github.com/joacocruz6</a></span></p>
-    <p>LinkedIn: <span class="info-me"><a href="https://www.linkedin.com/in/joaqu%C3%ADn-tomas-cruz-doggenweiler-3ab0b4168/">Joaquín Tomas Cruz Doggenweiler</a></span></p>
-    <p>Mail: <span class="info-me">joacocruz6@gmail.com</span></p>
-  </div>
+  <!--Main Map-->
+  <!--Free Peoples player-->
+  <div class="container-fluid" style="padding-top:15px;">
+    <div class="row ">
+      <div class="col-4"></div>
+      <div class="col-4 bg-primary" style="border-top-left-radius: 15px; border-top-right-radius: 15px;">
+        <h2>Free Peoples Player</h2>
+      </div>
+
+    </div>
+    <!--Map-->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4" style="background-color: black;">
+        <div class="map">
+          <div class="pointer"></div>
+          <img class="img-rounded imagen-mapa" src="imagenes/WholeMap.jpg" alt="War of the ring map">
+        </div>
+      </div>
+      </div>
+    </div>
+    <!--Sauron Player-->
+    <div class="container-fluid" style="padding-bottom:15px;">
+      <div class="row ">
+        <div class="col-4"></div>
+        <div class="col-4 player-enemy" style="border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
+          <h2 style="padding-left:60%">Sauron Player</h2>
+        </div>
+
+      </div>
+    </div>
 </body>
 <style src="style.css"></style>
 
