Some more styling

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
   </div>
   <!--Content displayed-->
-  <div class="container">
+  <div class="container" style="padding-top:15px;">
     <div class="row">
       <div class="col-3"></div>
       <div class="information col-6" style="background-color: grey; color: black; border-radius:10px; display:none;">
