--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WOTR Map App</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -55,8 +56,8 @@
   <!--Search navigation-->
   <div class="container-fluid" style="padding-top:15px;">
     <div class="row">
-      <div class="col-4"></div>
-      <div class="col-4">
+      <div class="col-4 col-sm-2 col-md-2"></div>
+      <div class="col-4 col-sm-4 col-md-4">
         <div class="input">
           <input type="text" id="search" name="search" placeholder="Search Here!" size="50"><span
             class="glyphicon glyphicon-search"></span>
@@ -64,21 +65,22 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-5"></div>
-      <div class="col-5">
+      <div class="col-5 col-sm-3 col-md-3"></div>
+      <div class="col-5 col-sm-5 col-md-5">
         <button type="button" class="btn btn-success btn-md" id="submit" name="button"
           onclick='searchRegion(document.getElementById("search").value)'>Search!</button>
 
         <button type="button" class="btn btn-danger btn-md" id="erase" name="button-erase" onclick="eraseInput()">Back
           to Normal!</button>
       </div>
+      <div class="col-2 col-sm-2 col-md-2"></div>
     </div>
   </div>
   <!--Content displayed-->
   <div class="container" style="padding-top:15px;">
     <div class="row">
       <div class="col-3"></div>
-      <div class="information col-6" style="background-color: grey; color: black; border-radius:10px; display:none;">
+      <div class="information col-6 col-sm-6 col-md-6" style="background-color: grey; color: black; border-radius:10px; display:none;">
         <h3 class="info-text"></h3>
         <div class="info-display"></div>
       </div>
@@ -88,17 +90,16 @@
   <!--Free Peoples player-->
   <div class="container-fluid" style="padding-top:15px;">
     <div class="row ">
-      <div class="col-4"></div>
-      <div class="col-4 bg-primary" style="border-top-left-radius: 15px; border-top-right-radius: 15px;">
+      <div class="col-2 col-sm-4 col-md-2"></div>
+      <div class="col-4 col-sm-8 col-md-8 bg-primary" style="border-top-left-radius: 15px; border-top-right-radius: 15px;">
         <h2>Free Peoples Player</h2>
       </div>
-
     </div>
     <!--Map-->
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4" style="background-color: black;">
+        <div class="col-4 col-sm-2 col-md-2"></div>
+        <div class="col-4 col-sm-4 col-md-4" style="background-color: black;">
         <div class="map">
           <div class="pointer"></div>
           <img class="img-rounded imagen-mapa" src="imagenes/WholeMap.jpg" alt="War of the ring map">
@@ -109,8 +110,8 @@
     <!--Sauron Player-->
     <div class="container-fluid" style="padding-bottom:15px;">
       <div class="row ">
-        <div class="col-4"></div>
-        <div class="col-4 player-enemy" style="border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
+        <div class="col-4 col-sm-2 col-md-2"></div>
+        <div class="col-4 player-enemy col-sm-8 col-md-8" style="border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
           <h2 style="padding-left:60%">Sauron Player</h2>
         </div>
 
